# rusthole

./: CONTRIBUTING.md  Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml
examples/: rusthole-doh.toml  rusthole-full.toml  rusthole-plain.toml
src/: config.rs  db.rs  dns_rewrite.rs  group_policy.rs  main.rs  schedule.rs  upstream_health.rs
src/api/: mod.rs
src/blocklist/: mod.rs
src/dhcp/: mod.rs
src/dns/: doh_server.rs  dot_server.rs  mod.rs  server.rs  tls.rs  upstream.rs
src/web/: mod.rs
static/: index.html
