[package]
name = "rusthole"
version = "0.2.0"
edition = "2024"
description = "Lightweight DNS sinkhole / Pi-hole alternative"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25"
hickory-resolver = "0.25"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dashmap = "6"
bytes = "1"
base64 = "0.22"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
anyhow = "1"
parking_lot = "0.12"
regex = "1"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[profile.release]
opt-level = 3
lto = true
strip = true
